--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LEVEL 2</title>
+    <title>Image Slider</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <!-- first section -->
     <div class="page-header">
-      <img src="./assets/logo/wsa-logo.svg" alt="logo" />
+      
       <h1 class="title">IMAGE CAROUSEL</h1>
     </div>
 
